@@ -1,5 +1,6 @@
 0.31
  - Add ATG CPAN account.
+ - Update Module::Install to 1.21 version.
 
 0.30 2021-09-16T16:12:02+02:00
  - Add PAJOUT CPAN account.
